# desktop2steoro-vulkan

./: .gitattributes  .gitignore  README.md  changelog.md  pyproject.toml
.github/workflows/: compliance.yml  filament-bridge-release.yml  filament-bridge.yml  filament-version-watch.yml
docs/: 01-Realtime-2d-to-3d-specification.md  02-desktop2stereo-engineering-design-specification.md  03-d2s_vulkan_migration_technical_report.md  04-realtime-stereo-parameter-guide.md  MIGRATION_MANIFEST.md  requirements-matrix.md
native/filament/: version.json
native/filament/bridge/: CMakeLists.txt  README.md  bridge_context.cpp  bridge_context.h  bridge_controller.cpp  bridge_controller.h  bridge_controller_guide.cpp  bridge_controller_guide.h  bridge_eye.cpp  bridge_eye.h  bridge_internal.h  bridge_laser.cpp  bridge_laser.h  bridge_material.cpp  bridge_material.h  bridge_scene.cpp  bridge_scene.h  bridge_screen.cpp  bridge_screen.h  build_filament_bridge.bat  configure_windows_nmake.bat  filament_bridge.cpp  filament_bridge.h  preview_bridge.cpp  preview_bridge.h
scripts/: README.md  compile_shaders.ps1
scripts/benchmark/: compare_python_env_depth_backends.py  profile_synthesis_4k.py
scripts/smoke/: d2s_depth_runtime_smoke.py
scripts/tools/: batch_generate_depth_maps.py  export_distill_base_onnx.py  local_4k_pipeline_benchmark.py
scripts/windows/: run_cuda13_onnx_smoke.ps1  run_visible_build_native_tensorrt_engine.bat  run_visible_export_distill_base_onnx.bat  run_visible_generate_depth.bat  setup_cuda13_nightly_env.ps1
shaders/: d2s_copy_image.comp  d2s_copy_image.spv  d2s_noop.comp  d2s_storage_image.comp  d2s_storage_image.spv  d2s_storage_increment.comp  d2s_storage_increment.spv  manifest.json
src/: main.bat  main.py  requirements.txt  settings.yaml
src/app_runtime/: __init__.py  bootstrap.py  gpu_producer.py  output_contract.py  probe.py  runtime_callbacks.py  runtime_context.py  runtime_entry.py  runtime_output.py  vulkan_runtime.py
src/capture/: capture_select.py  factory.py  geometry.py  preprocess_triton.py  runners.py  types.py
src/capture/backends/: linux_mss.py  macos_coregraphics.py  macos_screencapturekit.py  windows_capture_event.py  windows_dxcamera.py
src/gui/: __init__.py  builders.py  capture_sources.py  config.py  config_mgr.py  controls.py  gui.py  handlers.py  localization.py  log_handler.py  paths.py  process.py
src/shaders/: README.md
src/stereo_runtime/: __init__.py  adapter.py  depth_postprocess.py  fast_plus_fused_triton.py  hot_reload.py  model_artifacts.py  model_capabilities.py  openxr_state.py  pipeline.py  runtime.py  settings_snapshot.py  vulkan_graph.py  vulkan_image_pass.py  warp_composite_triton.py
src/stereo_runtime/providers/amd/: __init__.py  migraphx.py
src/stereo_runtime/providers/nvidia/: onnx_cuda.py  pytorch_cuda.py
src/streaming/: audio.py  encoder_profile.py  mjpeg_streamer.py
src/tools/: check_compliance.py  openxr_vulkan_smoke.py  probe.py  validate_shader_manifest.py  vulkan_compute_smoke.py  vulkan_transfer_smoke.py
src/utils/: bootstrap.py  capture_tool.py  device.py  device_runtime.py  display.py  i18n.py  logging_setup.py  network.py  settings.py
src/viewer/: assets.py  controller_help.py  cuda_vulkan_interop.py  opengl_renderer.py  rocm_vulkan_interop.py  upscaler.py  vulkan_compute_pipeline.py  vulkan_context.py  vulkan_descriptors.py  vulkan_interop.py  vulkan_renderer.py  vulkan_resources.py  window_control.py
src/xr_viewer/: __init__.py  controller_models.py  core_controller_actions.py  core_controller_guide_input.py  core_controller_input.py  core_controller_ray.py  core_controller_shortcuts.py  core_openxr_opengl.py  core_openxr_vulkan.py  filament_preview_bridge.py  filament_vulkan_bridge.py  input.py  laser_geometry.py  material_contract.py  overlay_textures.py  preview_room_layout.bat  preview_room_layout.py  windows_input.py
src/xr_viewer/controllers/HP/: profile.json
src/xr_viewer/controllers/INDEX/: profile.json
src/xr_viewer/controllers/VIVE/: profile.json
src/xr_viewer/controllers/YVR/: profile.json
src/xr_viewer/environments/: README.md
src/xr_viewer/environments/3D_Artemis/: profile.json
src/xr_viewer/environments/3D_Home/: environment.glb  profile.json
src/xr_viewer/environments/Artemis/: environment.glb  environment2.glb  environment3.glb  profile.json  star_glim.json
src/xr_viewer/environments/Bedroom/: environment.glb
src/xr_viewer/environments/Default/: profile.json
src/xr_viewer/environments/Living Room/: environment.glb
src/xr_viewer/gltf/: __init__.py  accessors.py  color_management.py  contract.py  document.py  loader.py  materials.py  primitives.py  render_plan.py  scene.py  validation.py
src/xr_viewer/native/filament_bridge/: CMakeLists.txt  README.md  build_filament_bridge.bat
tests/: test_capture_factory.py  test_capture_metadata.py  test_capture_preprocess_triton.py  test_capture_public_api.py  test_capture_runners.py  test_controller_guide_input.py  test_controller_shortcuts.py  test_cuda_vulkan_interop.py  test_depth_onnx_provider.py  test_display_resolution.py  test_export_onnx_dtype.py  test_filament_vulkan_bridge.py  test_hot_reload.py  test_infinidepth_provider.py  test_logging_setup.py  test_macos_coregraphics_capture.py  test_migration_scaffold.py  test_model_artifacts.py  test_no_legacy_depth_imports.py  test_openxr_vulkan.py  test_output_contract.py  test_parallax.py  test_pipeline.py  test_presets.py  test_pytorch_rocm_provider.py  test_requirements_matrix.py  test_runtime.py  test_runtime_callbacks.py  test_runtime_entry.py  test_runtime_output.py  test_shader_manifest.py  test_synthesis.py  test_utils_lazy_import.py  test_utils_network.py  test_viewer_settings.py  test_vulkan_interop.py  test_vulkan_resources.py  test_vulkan_runtime.py  test_windows_capture_event.py
